--- a/css/main.css
+++ b/css/main.css
@@ -422,6 +422,7 @@ img {
 }
 
 .site__header {
+  position: fixed;
   z-index: 99;
   width: 100%;
   background-color: #FFFFFF;
@@ -556,8 +557,11 @@ img {
   height: 650px;
   background-image: url(.././image/first__background.png);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
+  position: relative;
+  padding: 0;
+  margin: 0;
 }
 
 .first__title {
@@ -632,6 +636,241 @@ img {
   padding: 11px 36px;
 }
 
+@media only screen and (max-width: 1010px) {
+  .first__section {
+    width: 100%;
+    height: 650px;
+    background-image: url(.././image/first__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .first__title {
+    margin-bottom: 25px;
+    padding-top: 153px;
+    width: 376px;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 45px;
+    letter-spacing: -3.5px;
+    color: #FFFFFF;
+  }
+  .first__text {
+    position: relative;
+    margin-left: 80px;
+    width: 405px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .first__text::after {
+    position: absolute;
+    top: 50px;
+    left: 425px;
+    content: '';
+    display: block;
+    width: 300px;
+    height: 90px;
+    background-image: url(.././image/arrow-left.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .first__text::before {
+    position: absolute;
+    top: 50px;
+    right: 430px;
+    content: '';
+    display: block;
+    width: 150px;
+    height: 10px;
+    background-image: url(.././image/line.png);
+    background-repeat: no-repeat;
+  }
+  .first__btn {
+    background-color: #FCB72B;
+    border: none;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 20px;
+    color: #FFFFFF;
+    padding: 10px 30px;
+    margin-top: 15px;
+    margin-left: 80px;
+  }
+  .first__btn:hover {
+    background-color: transparent;
+    border: 3px solid #FCB72B;
+    color: #FCB72B;
+    padding: 11px 36px;
+  }
+}
+
+@media only screen and (max-width: 825px) {
+  .first__section {
+    width: 100%;
+    height: 650px;
+    background-image: url(.././image/first__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .first__title {
+    margin-bottom: 15px;
+    padding-top: 153px;
+    width: 315px;
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 35px;
+    letter-spacing: -0.5px;
+    color: #FFFFFF;
+  }
+  .first__text {
+    position: relative;
+    margin-left: 80px;
+    width: 350px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .first__text::after {
+    position: absolute;
+    top: 50px;
+    left: 370px;
+    content: '';
+    display: block;
+    width: 300px;
+    height: 90px;
+    background-image: url(.././image/arrow-left.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .first__text::before {
+    position: absolute;
+    top: 50px;
+    right: 430px;
+    content: '';
+    display: block;
+    width: 150px;
+    height: 10px;
+    background-image: url(.././image/line.png);
+    background-repeat: no-repeat;
+  }
+  .first__btn {
+    background-color: #FCB72B;
+    border: none;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 20px;
+    color: #FFFFFF;
+    padding: 10px 30px;
+    margin-top: 15px;
+    margin-left: 80px;
+  }
+  .first__btn:hover {
+    background-color: transparent;
+    border: 3px solid #FCB72B;
+    color: #FCB72B;
+    padding: 11px 36px;
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  .first__section {
+    width: 100%;
+    height: 650px;
+    background-image: url(.././image/first__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .first__title {
+    margin-bottom: 15px;
+    width: 573px;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 56px;
+    letter-spacing: -0.5px;
+    color: #FFFFFF;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+  }
+  .first__text {
+    position: relative;
+    margin-left: 0;
+    width: 573px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .first__text::after {
+    display: none;
+  }
+  .first__text::before {
+    display: none;
+  }
+  .first__btn {
+    background-color: #FCB72B;
+    border: none;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 20px;
+    color: #FFFFFF;
+    padding: 10px 30px;
+    margin-top: 15px;
+    margin-left: 0px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .first__btn:hover {
+    background-color: transparent;
+    border: 3px solid #FCB72B;
+    color: #FCB72B;
+    padding: 11px 36px;
+  }
+  .first__wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 0;
+  }
+}
+
+.second__section {
+  margin-top: -100px;
+  padding: 0;
+}
+
 .second__item {
   width: 350px;
 }
@@ -644,6 +883,18 @@ img {
   display: -ms-flexbox;
   display: flex;
   margin-top: 160px;
+  position: relative;
+}
+
+.second__list::before {
+  position: absolute;
+  top: 45px;
+  right: 260px;
+  z-index: -1;
+  content: '';
+  width: 974px;
+  height: 15px;
+  background-image: url(.././image/second__section-line.png);
 }
 
 .second__item ~ .second__item {
@@ -662,6 +913,238 @@ img {
   font-size: 15px;
   line-height: 25px;
   color: #939CAA;
+}
+
+@media only screen and (max-width: 890px) {
+  .second__item {
+    width: 300px;
+  }
+  .second__list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 160px;
+    position: relative;
+  }
+  .second__list::before {
+    position: absolute;
+    top: 45px;
+    right: 164px;
+    z-index: -1;
+    content: '';
+    width: 691px;
+    height: 15px;
+  }
+  .second__item ~ .second__item {
+    margin-left: 30px;
+  }
+  .second__item-title {
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 22px;
+  }
+  .second__item__text {
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 22px;
+    color: #939CAA;
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  .second__item {
+    width: 573px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .second__item-left {
+    margin-left: 79px;
+  }
+  .second__list {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    margin-top: 149px;
+  }
+  .second__wrapper {
+    position: relative;
+  }
+  .second__list::before {
+    display: none;
+  }
+  .second__item-title::before {
+    position: absolute;
+    top: -50px;
+    right: 595px;
+    z-index: -1;
+    content: '';
+    width: 15px;
+    height: 512px;
+    background-image: url(.././image/second__section-line2.png);
+  }
+  .second__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .second__item ~ .second__item {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .second__item-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 27px;
+    margin-top: 40px;
+    text-align: left;
+  }
+  .second__item__text {
+    width: 398px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+    color: #939CAA;
+    text-align: left;
+  }
+  .second__section {
+    margin-top: -100px;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  .second__item-title::before {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .second__item {
+    width: 450px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .second__item-left {
+    margin-left: 45px;
+  }
+  .second__list {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    margin-top: 122px;
+  }
+  .second__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .second__item ~ .second__item {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .second__item-title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 18px;
+    margin-bottom: 15px;
+    margin-top: 45px;
+    text-align: left;
+  }
+  .second__item__text {
+    width: 295px;
+    font-family: 'Lexend Deca';
+    font-size: 12px;
+    line-height: 20px;
+    color: #939CAA;
+    text-align: left;
+  }
+  .second__img {
+    width: 70px;
+    height: 70px;
+  }
+}
+
+@media only screen and (max-width: 520px) {
+  .second__item {
+    width: 311px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 48px;
+  }
+  .second__list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+    margin-top: 122px;
+  }
+  .second__item-title {
+    width: 311px;
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 24px;
+    margin-top: 24px;
+    text-align: center;
+  }
+  .second__item__text {
+    width: 311px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+    color: #939CAA;
+    text-align: center;
+  }
+  .second__img {
+    width: 56px;
+    height: 56px;
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .second__item {
+    width: 280px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 38px;
+  }
+  .second__list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+    margin-top: 122px;
+  }
+  .second__item-title {
+    width: 280px;
+    font-size: 18px;
+    line-height: 18px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    text-align: center;
+  }
+  .second__item__text {
+    width: 280px;
+    font-family: 'Lexend Deca';
+    font-size: 13px;
+    line-height: 22px;
+    color: #939CAA;
+    text-align: center;
+  }
+  .second__img {
+    width: 50px;
+    height: 50px;
+  }
 }
 
 .easy__wrapper {
