--- a/scss/blocks/_first.scss
+++ b/scss/blocks/_first.scss
@@ -3,8 +3,11 @@
   height: 650px;
   background-image: url(.././image/first__background.png);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: center ;
+  position: relative;
+  padding: 0;
+  margin: 0;
   
 }
 .first__title{
@@ -66,4 +69,226 @@ margin-left: 80px;
   border: 3px solid #FCB72B;
   color: #FCB72B;
   padding: 11px 36px;
+}
+@include breakpoint-down(1010px){
+  .first__section{
+    width: 100%;
+    height: 650px;
+    background-image: url(.././image/first__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center ;
+    
+  }
+  .first__title{
+    margin-bottom: 25px;
+    padding-top: 153px;
+    width: 376px;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 45px;
+  letter-spacing:-3.5px ;
+  color: #FFFFFF;
+  }
+  .first__text{
+    position: relative;
+    margin-left: 80px;
+    width: 405px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+  color: #FFFFFF;
+  display: flex;
+  
+  ;
+  }
+  .first__text::after{
+    position:absolute;
+    top: 50px;
+    left: 425px;
+    content: '';
+    display: block;
+    width: 300px;
+    height: 90px;
+    background-image: url(.././image/arrow-left.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .first__text::before{
+    position:absolute;
+    top: 50px;
+    right: 430px;
+    content: '';
+    display: block;
+    width: 150px;
+    height: 10px;
+    background-image: url(.././image/line.png);
+    background-repeat: no-repeat;
+  }
+  .first__btn{
+  @include btn-mix;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 20px;
+  color: #FFFFFF;
+  padding: 10px 30px;
+  margin-top: 15px;
+  margin-left: 80px;
+  }
+  .first__btn:hover{
+    background-color: transparent;
+    border: 3px solid #FCB72B;
+    color: #FCB72B;
+    padding: 11px 36px;
+  }
+}
+@include breakpoint-down(825px){
+  .first__section{
+    width: 100%;
+    height: 650px;
+    background-image: url(.././image/first__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center ;
+    
+  }
+  .first__title{
+    margin-bottom: 15px;
+    padding-top: 153px;
+    width: 315px;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 35px;
+  letter-spacing:-0.5px ;
+  color: #FFFFFF;
+  }
+  .first__text{
+    position: relative;
+    margin-left: 80px;
+    width: 350px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+  color: #FFFFFF;
+  display: flex;
+  
+  ;
+  }
+  .first__text::after{
+    position:absolute;
+    top: 50px;
+    left: 370px;
+    content: '';
+    display: block;
+    width: 300px;
+    height: 90px;
+    background-image: url(.././image/arrow-left.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .first__text::before{
+    position:absolute;
+    top: 50px;
+    right: 430px;
+    content: '';
+    display: block;
+    width: 150px;
+    height: 10px;
+    background-image: url(.././image/line.png);
+    background-repeat: no-repeat;
+  }
+  .first__btn{
+  @include btn-mix;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 20px;
+  color: #FFFFFF;
+  padding: 10px 30px;
+  margin-top: 15px;
+  margin-left: 80px;
+  }
+  .first__btn:hover{
+    background-color: transparent;
+    border: 3px solid #FCB72B;
+    color: #FCB72B;
+    padding: 11px 36px;
+  }
+}
+@include breakpoint-down(770px){
+  .first__section{
+    width: 100%;
+    height: 650px;
+    background-image: url(.././image/first__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center ;
+    
+  }
+  .first__title{
+    margin-bottom: 15px;
+    width: 573px;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing:-0.5px ;
+  color: #FFFFFF;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  }
+  .first__text{
+    position: relative;
+    margin-left: 0;
+    width: 573px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+  color: #FFFFFF;
+  display: flex;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  
+  ;
+  }
+  .first__text::after{
+    // position:absolute;
+    // top: 50px;
+    // left: 370px;
+    // content: '';
+    // display: block;
+    // width: 300px;
+    // height: 90px;
+    // background-image: url(.././image/arrow-left.png);
+    // background-repeat: no-repeat;
+    // background-size: contain;
+    display: none;
+  }
+  .first__text::before{
+  display: none;
+  }
+  .first__btn{
+  @include btn-mix;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 20px;
+  color: #FFFFFF;
+  padding: 10px 30px;
+  margin-top: 15px;
+  margin-left: 0px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  }
+  .first__btn:hover{
+    background-color: transparent;
+    border: 3px solid #FCB72B;
+    color: #FCB72B;
+    padding: 11px 36px;
+  }
+  .first__wrapper{
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 0;
+  }
 }
