--- a/scss/blocks/_easy.scss
+++ b/scss/blocks/_easy.scss
@@ -2,6 +2,10 @@
   display: flex;
   align-items: center;
   margin-top: 200px;
+  position: relative;
+}
+.easy__wrapper-left{
+  margin-top: -65px;
 }
 .easy__title{
 width: 445px;
@@ -26,6 +30,395 @@ margin-bottom: 24px;
 .main__btn:hover{
  @include main__btn-hover
 }
-.easy__img{
+.easy__wrapper-right{
   margin-left: auto;
+}
+.easy__img--responsive{
+  display: none;
+}
+.easy__img{
+  position: relative;
+  z-index: -11;
+}
+.easy__section{
+  background-image: url(.././image/easy-arrow.png),
+  url(.././image/empty__img.png) ;
+  background-repeat: no-repeat;
+  background-position: calc(50% + 340px) 300px,calc(50% + 790px) 0px;
+  
+}
+
+@include breakpoint-down(950px){
+  .easy__wrapper{
+    display: flex;
+    align-items: center;
+    margin-top: 200px;
+    position: relative;
+  }
+  .easy__wrapper-left{
+    margin-top: -65px;
+  }
+  .easy__title{
+  width: 345px;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 35px;
+  color: $color-black;
+  margin-bottom: 15px;
+  }
+  .easy__text{
+    width: 420px;
+    font-family: 'Lexend Deca';
+    font-size: 12px;
+    line-height: 25px;
+   color: $color-text;
+   margin-bottom: 30px;
+  }
+  .main__btn{
+    @include btn-mix;
+    padding: 14px 44px;
+  }
+  .main__btn:hover{
+   @include main__btn-hover
+  }
+  .easy__wrapper-right{
+    margin-left: auto;
+  }
+  .easy__img--responsive{
+    display: none;
+  }
+  .easy__img{
+    position: relative;
+    z-index: -11;
+    width: 385px;
+    height: 385px;
+  }
+  .easy__section{
+    background-image: url(.././image/easy-arrow.png),
+    url(.././image/empty__img.png) ;
+    background-repeat: no-repeat;
+    background-position: calc(50% + 340px) 255px,calc(50% + 790px) 0px;
+    background-size: 720px 120px , 385px 385px;
+    
+  }
+  
+}
+@include breakpoint-down(870px){
+  .easy__wrapper{
+    display: flex;
+    align-items: center;
+    margin-top: 200px;
+    position: relative;
+  }
+  .easy__wrapper-left{
+    margin-top: -65px;
+  }
+  .easy__title{
+  width: 329px;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  color: $color-black;
+  margin-bottom: 15px;
+  }
+  .easy__text{
+    width: 348px;
+    font-family: 'Lexend Deca';
+    font-size: 10px;
+    line-height: 20px;
+   color: $color-text;
+   margin-bottom: 30px;
+  }
+  .main__btn{
+    @include btn-mix;
+    padding: 14px 44px;
+  }
+  .main__btn:hover{
+   @include main__btn-hover
+  }
+  .easy__wrapper-right{
+    margin-left: auto;
+  }
+  .easy__img--responsive{
+    display: none;
+  }
+  .easy__img{
+    position: relative;
+    z-index: -11;
+    width: 350px;
+    height: 350px;
+  }
+  .easy__section{
+    background-image: url(.././image/easy-arrow.png),
+    none;
+    background-repeat: no-repeat;
+    background-position: calc(50% + 320px) 220px;
+    background-size: 650px 110px ;
+    
+  }
+  
+}
+@include breakpoint-down(770px){
+  .easy__wrapper{
+    display: block;
+    align-items: center;
+    margin-top: 200px;
+    position: relative;
+  }
+  .easy__wrapper-left{
+    margin-top: 0px;
+
+  }
+  .easy__title{
+  width: 457px;
+  font-weight: 700;
+  font-size: 46px;
+  line-height: 46px;
+  color: $color-black;
+  margin-bottom: 15px;
+  margin-top: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  }
+  .easy__text{
+    width: 573px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+   color: $color-text;
+   margin-bottom: 40px;
+   margin-right: auto;
+   margin-left: auto;
+   text-align: center;
+  }
+  .main__btn{
+    @include btn-mix;
+    padding: 14px 44px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .main__btn:hover{
+   @include main__btn-hover
+  }
+  .easy__wrapper-right{
+    margin-left: auto;
+  }
+  .easy__img--responsive{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .easy__img{
+    display: none;
+  }
+  .easy__section{
+    background-image: url(.././image/easy-arrow.png),
+    url(.././image/empty__img.png);
+    background-repeat: no-repeat;
+    background-position: calc(50% + 0px) 320px,calc(50% + 790px) 0px;
+    background-size: 500px 80px ,445px 445px ;
+  }
+  
+}
+@include breakpoint-down(590px){
+  .easy__wrapper{
+    display: block;
+    align-items: center;
+    margin-top: 200px;
+    position: relative;
+  }
+  .easy__wrapper-left{
+    margin-top: 0px;
+
+  }
+  .easy__title{
+  width: 395px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 40px;
+  color: $color-black;
+  margin-bottom: 15px;
+  margin-top: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  }
+  .easy__text{
+    width: 400px;
+    font-family: 'Lexend Deca';
+    font-size: 13px;
+    line-height: 20px;
+   color: $color-text;
+   margin-bottom: 20px;
+   margin-right: auto;
+   margin-left: auto;
+   text-align: center;
+  }
+  .main__btn{
+    @include btn-mix;
+    padding: 14px 44px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .main__btn:hover{
+   @include main__btn-hover
+  }
+  .easy__wrapper-right{
+    margin-left: auto;
+  }
+  .easy__img--responsive{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .easy__img{
+    display: none;
+  }
+  .easy__section{
+    background-image: url(.././image/easy-arrow.png),
+    url(.././image/empty__img.png);
+    background-repeat: no-repeat;
+    background-position: calc(50% + 0px) 320px,calc(50% + 790px) 0px;
+    background-size: 500px 80px ,445px 445px ;
+  }
+  
+}
+@include breakpoint-down(430px){
+  .easy__wrapper{
+    display: block;
+    align-items: center;
+    margin-top: 200px;
+    position: relative;
+  }
+  .easy__wrapper-left{
+    margin-top: 0px;
+
+  }
+  .easy__title{
+  width: 311px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 32px;
+  color: $color-black;
+  margin-bottom: 15px;
+  margin-top: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  }
+  .easy__text{
+    width: 311px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 20px;
+   color: $color-text;
+   margin-bottom: 20px;
+   margin-right: auto;
+   margin-left: auto;
+   text-align: center;
+  }
+  .main__btn{
+    @include btn-mix;
+    padding: 14px 44px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .main__btn:hover{
+   @include main__btn-hover
+  }
+  .easy__wrapper-right{
+    margin-left: auto;
+  }
+  .easy__img--responsive{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 311px;
+    height: 311px;
+    position: relative;
+    z-index: -5;
+  }
+  .easy__img{
+    display: none;
+  }
+  .easy__section{
+    background-image: url(.././image/easy-arrow.png),
+   none;
+    background-repeat: no-repeat;
+    background-position: calc(50% + 180px) 140px;
+    background-size: 700px 130px;
+  }
+  
+}
+@include breakpoint-down(330px){
+  .easy__wrapper{
+    display: block;
+    align-items: center;
+    margin-top: 200px;
+    position: relative;
+  }
+  .easy__wrapper-left{
+    margin-top: 0px;
+
+  }
+  .easy__title{
+  width: 300px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 32px;
+  color: $color-black;
+  margin-bottom: 15px;
+  margin-top: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  }
+  .easy__text{
+    width: 300px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 20px;
+   color: $color-text;
+   margin-bottom: 20px;
+   margin-right: auto;
+   margin-left: auto;
+   text-align: center;
+  }
+  .main__btn{
+    @include btn-mix;
+    padding: 14px 44px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .main__btn:hover{
+   @include main__btn-hover
+  }
+  .easy__wrapper-right{
+    margin-left: auto;
+  }
+  .easy__img--responsive{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 311px;
+    height: 311px;
+    position: relative;
+    z-index: -5;
+  }
+  .easy__img{
+    display: none;
+  }
+  .easy__section{
+    background-image: url(.././image/easy-arrow.png),
+   none;
+    background-repeat: no-repeat;
+    background-position: calc(50% + 180px) 140px;
+    background-size: 700px 130px;
+  }
+  
 }
