--- a/scss/blocks/_last.scss
+++ b/scss/blocks/_last.scss
@@ -6,6 +6,7 @@
   background-position: center , center ;
   background-size: cover;
   width: 100%;
+  margin-top: -200px;
 }
 .last__wrapper{
   display: flex;
