--- a/css/main.css
+++ b/css/main.css
@@ -1059,7 +1059,6 @@ img {
     font-size: 35px;
     line-height: 35px;
     letter-spacing: -1.79px;
-    color: #FFFFFF;
     margin-right: auto;
     margin-left: auto;
     text-align: center;
@@ -1071,7 +1070,6 @@ img {
     font-family: 'Lexend Deca';
     font-size: 14px;
     line-height: 22px;
-    color: #FFFFFF;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1106,7 +1104,6 @@ img {
     font-weight: 700;
     font-size: 14px;
     line-height: 24px;
-    color: #FFFFFF;
     padding: 12px 37px;
     margin-top: 34px;
     display: block;
@@ -2920,6 +2917,7 @@ img {
   background-position: center , center;
   background-size: cover;
   width: 100%;
+  margin-top: -200px;
 }
 
 .last__wrapper {
